src/objects/MM_Request_Details__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Quantity__c</fullName>
        <label>Approved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Remarks__c</fullName>
        <label>Approver Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Area__c</fullName>
        <label>Dealer Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_District__c</fullName>
        <label>Dealer District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Material_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Material Name</label>
        <referenceTo>Marketing_Material__c</referenceTo>
        <relationshipLabel>MM Request Details</relationshipLabel>
        <relationshipName>MM_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Requests__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Requests</label>
        <referenceTo>Partner_Service_Request__c</referenceTo>
        <relationshipLabel>MM Request Details</relationshipLabel>
        <relationshipName>MM_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MM Request Details</label>
    <nameField>
        <displayFormat>MM - {0000000}</displayFormat>
        <label>MM Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MM Request Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approval_required_for_MM_Service_Request</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR ($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;PRM User CRM&quot;), OR ( ISBLANK(Approved_Quantity__c), Approved_Quantity__c == 0), OR( ISBLANK( Approver_Remarks__c), Approver_Remarks__c == &quot;-&quot;))</errorConditionFormula>
        <errorMessage>The Approved Quantity / Approver Remarks should be provided for every Service Request line by the CRM user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_less_than_1000</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	NOT(
		(ISPICKVAL(Service_Requests__r.Type_Of_Request__c, &apos;Dealer Certificate&apos;) )), Quantity__c &gt; 999)</errorConditionFormula>
        <errorMessage>Quantity must be less than 1000.</errorMessage>
    </validationRules>
</CustomObject>